<resources>
    <string name="app_name">FLY</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="date_of_birth">DOB</string>
    <string name="reenterpassword">Re-Enter Password</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="palawan">"Voted the world's most beautiful island more than once, Palawan is a slice of heaven, teeming with exotic wildlife, quaint fishing villages, and UNESCO World Heritage Sites. Visit the Calauit Game Preserve and Wildlife Sanctuary or explore the Japanese shipwrecks of Coron Island, regarded as one of the best dive sites in the world."</string>
    <string name="moraine">"Moraine Lake may only only half the size of its nearby neighbour Lake Louise, but it's even more scenic. Situated in the beautiful Valley Of The Ten Peaks in Banff National Park, this glacier-fed lake turns the most intense and vivid shade of turquoise blue. The setting of the surrounding majestic mountain peaks makes the scene almost surreal."</string>
    <string name="cliffs">"These soaring cliffs in County Clare are one of Ireland's most famous tourist attractions. The maximum height of Cliffs is 214 m. This natural sanctuary is home to some 30,000 birds from 20 different species."</string>
    <string name="great">"Diverse aquatic species include leatherback turtles and clown fish, the Great Barrier Reef needs no introduction. The world's largest coral reef system composed of over 2,900 individual reefs and 900 islands stretching for over 2,300 kilometres over an area of approximately 344,400 square kilometres (133,000 sq mi), the Great Barrier Reef can be seen from outer space and is the world's biggest single structure made by living organisms."</string>
    <string name="iguazu">"One of the modern natural wonders of the world, this chain of mini waterfalls is one of the planet's most awe-inspiring sights. A visit is an awe-inspiring visceral experience, and the power and noise of the cascades – a chain of hundreds of waterfalls nearly 3km in extension – is something you won't forget. The falls lie split between Brazil and Argentina in a large expanse of national park, much of it rainforest teeming with unique flora and fauna."</string>
    <string name="valley">"Nestled in the Nanda Devi Biosphere, the Valley of Flowers is the most attractive place in Uttarakhand. Every inch of this place is blessed with unparalleled natural beauty in the form of endemic alpine flowers and diversity of flora, including medicinal herbs. Besides, it is also home to a variety of endangered species of animals, including the snow leopard, Asiatic black bear, blue sheep and musk deer, to name a few. Also, there are a host of gushing waterfalls and streams in this scenic valley. You need to trek to this beautiful valley, so be aware that July to September is the only time when trekking is allowed here."</string>
    <string name="dzukou">"Sandwiched between north-eastern states of Manipur and Nagaland, Dzukou Valley is home to lush green forest, mosaic of grasslands, flowers of varying hues, and an abundance of flora and fauna, making it a perfect spot to spend some time in the lap of Mother Nature. The Japfu hills add to the splendour of the place and make it is a perfect spot for trekking. If you’re not up for trekking, take a stroll among the ubiquitous flowers. This is home to a variety of flowers, including the rare and unique Dzükou lily, multi-colored rhododendrons and aconitum. The best time to visit is October to May. To reach the valley, you need to trek either from Zakhama village or Visvema village. Indian visitors need an inner line permit for Nagaland and foreign visitors must register themselves at the local state government office in Kohima or Dimapur, Nagaland."</string>
    <string name="pithoragarh">"Located in the eastern district of Uttarakhand, Pithoragarh boasts of irresistible natural beauty, high altitude grasslands and historic charm. It is the starting point for treks to the holy shrines of Kailash and Mansarovar. And, the panoramic views of the mighty peaks of Nanda Devi, Appi of Nepal and Panchachuli are clearly visible from this place. Some of the tourist spots include the Pithoragarh Fort, Askot Sanctuary that is home to a wide range of flora and fauna, and Kafni Glacier Trek, among many others. And, visitors can also indulge in adventure activities, like hiking, skiing, canoeing, kayaking and fishing. This tiny place is an ideal place for those looking for a nature retreat."</string>
    <string name="munnar">"Spend some “me” time in nature’s lap in Munnar, a hill station famous for its tea and spice plantations. Camping, parasailing, birdwatching, trekking, wildlife spotting, fishing, boating and rock climbing are the popular activities here. Some of the must-visit attractions include Echo Point, and Kundala Lake where you can enjoy boating and shikara rides amidst the natural beauty and views of rolling hills; Devikulum is home to an assortment of temples, Attakud waterfall and Anamudi Peak, among many others. For tea lovers, there’s a Tata Tea Museum where you can learn about the history of tea and its processing."</string>
    <string name="chail">"Sitting amid the Shivalik hills, Chail is a peaceful and secluded hill station that once served as a summer retreat for the Maharaja of Patiala. Surrounded by deodar and pine forests and replete with spectacular views of the mountains, this place is a delight for nature lovers and photographers. A visit to Sadhupul lake, Chail Palace, Kali temple and the Chail Wildlife Sanctuary is a must when in Chail."</string>
    <string name="article1">"You can be hindered from making progress if you ignore your problems. Could you be letting little challenges grow into huge obstacles by not dealing with them?
When faced with unpleasant situations it is tempting to ignore them and not deal with them. The path of least resistance is an attractive one and the effort required to deal with the problem sometimes seems too immense. At times it’s not so much that the problem is big but that it requires us to admit something about ourselves or others that we just don’t want to face. The trouble is “You will not find a solution by saying there is no problem.”
 the dangers of not handling your problems
The longer you take to deal with your problems the bigger they will grow and the harder it will be to sort them out. They are like weeds that grow in a beautiful garden. If not recognized and uprooted early enough they will dominate the garden and choke the beautiful flowers in the garden. In fact you will forget there was ever a lovely garden there to begin with.
Secondly, when ignored, problems may become accepted as the norm. I remember working at a hospital where there are often shortages of medical supplies. As medical staff there we got so used to improvising that even when some supplies were in stock we did not think of using them. For instance, we improvised arm slings for shoulder dislocations and broken limbs by using bandages and empty fluid bags. One nurse actually had to remind me that the pharmacy had plenty of arm slings so I should not be wasting people’s money by telling them to buy bandages instead. My mind had become accustomed to the abnormal to such an extent that it became normal and I absolutely did not think there was any other way to get the job done.
There are many abnormal situations and circumstances in our lives that we have become used to and comfortable with to the extent that we do not see the need for change. It is possible for you to become used to poverty and lack. It is even possible to get used to mediocrity and failure. Ignore the problem long enough and it may no longer become a problem to you. The trouble is you will not be living the kind of life you should be living. “Making do” is not always a good thing.

Lastly, a problem that is not dealt with can lead to other problems. Unfortunately, problems are very social creatures and they will eagerly invite other problems into your life if you harbour them for too long. By not controlling one you may be opening the door to many others. It’s the domino effect: one action or lack of it in this case, can lead to many different consequences.
 change your thinking
So how do you deal with problems? The first and best way is to change the way you think about problems. . “The way you see the problem is the problem.” I like to think of such things as “challenges” rather than problems because “Problem” is a dead-end word. It leaves no room for solutions. When you regard something as a challenge instead, it leaves your mind free to think about how to respond to it. If you see it as a temporary obstacle you are more likely to feel empowered and able to deal with it.
David Oyedepo and Chris Oyakhilome, who are both pastors, say that many people have asked them whether they ever have problems in their lives as they always seem to be having it easy and things are always working out for them. Their response is that they don’t remember having problems. They add that perhaps the problem came, but they did not recognize it. Their mindset is one of dealing with things as they come and knowing that they have the answer to anything that they face. As they are on God’s side, I’m sure they cannot fail to have answers.
focus on the desired outcome
A second way to deal with a problem is to focus on the solution instead. Focusing on the problem too much may actually make it more impossible to solve. This can make the problem so big in your mind that it obscures or overshadows any possible solution. Try instead to think about what life would be like if the problem were solved. This brings your creativity into play and your mind will soon find ways to solve the problem.
According to Albert Einstein “You can't solve a problem with the same kind of thinking that created it.” A third way to deal with problems, then, is to alter your viewpoint. One way of doing this is to distance yourself emotionally from the problem. Try looking at the problem as an impartial observer and not as someone actively involved in it. This technique will not only make the problem seem less daunting, but will also help you to find possible solutions. When you are emotionally involved in something it clouds your judgment and dulls your creativity.
have a sense of humour
Finally, “laugh at your problems; everybody else does.” It is important to realise that any problem, no matter how big it may seem at the time, has a solution and is usually not the end of our lives as we may often feel. As long as you are breathing no problem is beyond solving. There is always hope to those that will look for it. Take life in your stride. Do not get bogged down by it and don’t ever forget to enjoy it. A free and fun mindset alone will go a long way in helping you to deal with your problems.
 the conclusion
Look ahead with confidence. Stay focused on what you want and not what’s in your way. “Don't be pushed by your problems. Be led by your dreams.”
You are all you can be. Go on and be it.
LINK: https://www.motivation-for-dreamers.com/dealing-with-problems.html"
</string>
</resources>