<?xml version="1.0" encoding="UTF-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/newimglogin"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="Register">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginStart="-15dp"
        android:textSize="25sp"
        android:text="SIGN-UP"
        android:textColor="#FFFFFF"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/username"
        android:layout_width="300dp"
        android:layout_height="51dp"
        android:layout_marginTop="10dp"
        android:hint="@string/username" />


    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="51dp"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:inputType="textPassword" />


    <EditText
        android:id="@+id/confirm"
        android:layout_width="300dp"
        android:layout_height="51dp"
        android:layout_marginTop="10dp"
        android:hint="@string/reenterpassword"
        android:inputType="textPassword" />


    <EditText
        android:id="@+id/dob"
        android:layout_width="300dp"
        android:layout_height="51dp"
        android:layout_marginTop="10dp"
        android:hint="DOB (dd/mm/yyyy)"
        android:inputType="date" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="#DC985C"
        android:text="@string/register" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:textColor="#aaaaaa"
            android:text="Already Registered? " />

        <TextView
            android:id="@+id/login1"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:textColor="#aaaaaa"
            android:text="Login"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>